refactor(delete): 重构删除功能并支持单个 ID 删除
- 修改 DeleteStatement 类，增加单个 ID 删除的字段
- 重构 DeleteSqlParser 类，使用 jooq 构建 SQL 语句
- 更新 DeleteEngine 类，适应新的删除逻辑
- 修改测试用例，测试单个 ID 删除功能