@@ -1,66 +1,69 @@
 package org.waitlight.simple.jsonql.builder;
 
-import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.jooq.DSLContext;
+import org.jooq.SQLDialect;
+import org.jooq.Table;
+import org.jooq.impl.DSL;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.waitlight.simple.jsonql.metadata.Metadata;
 import org.waitlight.simple.jsonql.statement.DeleteStatement;
-import org.waitlight.simple.jsonql.statement.JsonQLStatement;
 
 import java.util.ArrayList;
 import java.util.List;
 
-public class DeleteSqlParser {
+public class DeleteSqlParser extends AbstractSqlBuilder<DeleteStatement> {
 
     private static final Logger log = LoggerFactory.getLogger(DeleteSqlParser.class);
-    // No MetadataSources needed for basic delete by ID currently
 
-    public DeleteSqlParser() {
-        // Constructor
+    public DeleteSqlParser(Metadata metadata) {
+        super(metadata);
     }
 
-    public PreparedSql<DeleteStatement> parseSql(JsonQLStatement statement) {
-        if (!(statement instanceof DeleteStatement deleteStatement)) {
-            throw new IllegalArgumentException(
-                    "Expected DeleteStatement but got " + statement.getClass().getSimpleName());
+    @Override
+    public PreparedSql<DeleteStatement> build(DeleteStatement statement) throws SqlBuildException {
+        if (statement == null) {
+            throw new SqlBuildException("DeleteStatement is null");
         }
 
-        String entityId = deleteStatement.getEntityId();
-        if (entityId == null || entityId.isBlank()) {
-            throw new IllegalArgumentException("entityId is required for delete statements");
+        String entityId = statement.getEntityId();
+        if (StringUtils.isBlank(entityId)) {
+            throw new SqlBuildException("entityId is required for delete statements");
         }
 
-        StringBuilder sql = new StringBuilder();
+        // 只支持单个ID删除，检查id字段
+        String id = statement.getId();
+        if (StringUtils.isBlank(id)) {
+            throw new SqlBuildException("id is required for delete statement");
+        }
+
+        return buildSql(entityId, id);
+    }
+
+    /**
+     * 构建DELETE SQL语句及其参数
+     */
+    private PreparedSql<DeleteStatement> buildSql(String entityId, String id) throws SqlBuildException {
+        DSLContext create = DSL.using(SQLDialect.MYSQL);
+        Table<?> table = DSL.table(DSL.name(entityId));
+
         List<Object> parameters = new ArrayList<>();
 
-        // DELETE FROM clause
-        sql.append("DELETE FROM ").append(entityId);
+        // 使用jooq构建DELETE语句
+        String sql = create.deleteFrom(table)
+                .where(DSL.field(DSL.name("id")).eq(DSL.param()))
+                .getSQL();
 
-        // WHERE clause (优先处理 ids 列表)
-        List<String> idsToDelete = deleteStatement.getIds();
+        parameters.add(id);
 
-        if (CollectionUtils.isNotEmpty(idsToDelete)) {
-            // Build WHERE id IN (?, ?, ...) clause
-            sql.append("\nWHERE id IN ("); // Assuming the primary key column is named 'id'
-            sql.append(String.join(", ", java.util.Collections.nCopies(idsToDelete.size(), "?")));
-            sql.append(")");
-            parameters.addAll(idsToDelete); // Add all IDs as parameters
-        } else {
-            // Safety measure: Prevent accidental deletion of all rows if no condition
-            // specified
-            log.warn("Attempting to build DELETE statement without specific IDs for entity: {}. " +
-                    "This parser requires 'ids' for DELETE.", entityId);
-            // Throw an error to prevent generating a statement that would delete all
-            // records.
-            // The executor might have further checks, but the parser itself should indicate
-            // this limitation.
-            throw new IllegalArgumentException(
-                    "Condition (using 'ids') is mandatory for building DELETE SQL statements.");
-        }
+        log.info("build delete sql: {}", sql);
 
-        PreparedSql<DeleteStatement> sqlObj = new PreparedSql<>();
-        sqlObj.setSql(sql.toString());
-        sqlObj.setParameters(parameters);
-        sqlObj.setStatementType(DeleteStatement.class);
-        return sqlObj;
+        PreparedSql<DeleteStatement> preparedSql = new PreparedSql<>();
+        preparedSql.setSql(sql);
+        preparedSql.setParameters(parameters);
+        preparedSql.setStatementType(DeleteStatement.class);
+
+        return preparedSql;
     }
 }
